# forge

./: LICENSE  README.md  forge-build.sh  forge-clean.sh  forge-init.sh  forge-install.sh  forge-run.sh  install.sh  pyproject.toml
doc/: COMMANDS.md  CONFIG.md
lib/: forge-build.sh  forge-init.sh  forge-run.sh  forge-test.sh  log.sh
src/cpp_forge/: __init__.py  cli.py
